# Blockchain-DNS

./: CMakeLists.txt  README.md  blockchainmanager.cpp  blockchainmanager.h  config.cpp  config.h  dns.cpp  dns.h  forward.cpp  forward.h  global.cpp  global.h  main.cpp  server.cpp  server.h  taskmanager.cpp  taskmanager.h
blockchain/: Blockchain.cpp  Blockchain.h  CMakeLists.txt  scale.cpp  scale.h
cache/: CMakeLists.txt  Cache.cpp  Cache.h  list.cpp  list.h
